Fix count and prevent duplicates on jobrequirement